# sequel

./: Cargo.toml  README.md
macros/src/: lib.rs
src/: command.rs  connection.rs  data.rs  error.rs  frame.rs  lib.rs  main.rs
src/command/: create_table.rs  error.rs  insert.rs  mod.rs  select.rs
src/connection/: conn.rs  error.rs  frame.rs  mod.rs
src/db/: column_header.rs  error.rs  mod.rs  row.rs  table.rs
src/parse/: ast.rs  error.rs  mod.rs  parser.rs  scanner.rs  token.rs
