[package]
name = "sequel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sequel-client"
path = "src/bin/client.rs"

[[bin]]
name = "sequel-server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
futures = "0.3"
anyhow = "1.0.72"
rustyline = "12.0.0"
ordered-float = "3.9.0"
macros = { path = "./macros" }
